# goku

./: CMakeLists.txt  README.md  diffbot_system.xml  package.xml
SPI_HW_interface/: diff_drive_controller
SPI_HW_interface/controller_config/: diff_drive_controller.yaml
SPI_HW_interface/diff_drive_controller/: diff_drive_controller.yaml
SPI_HW_interface/launch/: diff_drive_launch.py
SPI_HW_interface/src/: CMakeLists.txt  diff_drive_hw_interface.cpp  diff_drive_hw_interface.xml
config/: diffbot_controllers.yaml  ekf.yaml  nav2_params.yaml  slam_params.yaml
include/goku/: diffbot_system.hpp
launch/: goku.launch.py
ros2_control/: goku.ros2_control.xacro
src/: diffbot_system.cpp
stm32f4/: main_test_spi.c
urdf/: goku.urdf.xacro
